--- a/arbiter/tests/unit_test/CMakeLists.txt
+++ b/arbiter/tests/unit_test/CMakeLists.txt
@@ -11,12 +11,16 @@ if(WIN32)
 	include_directories("\\lib\\x64\\vc110\\UnitTestxx\\1.4\\include")
 	include_directories("\\lib\\x64\\vc110\\VLD\\2.2.3\\include")
 
+	link_directories("\\lib\\x64\\vc110\\Boost\\1.52.0\\lib")
 	link_directories("\\lib\\x64\\vc110\\VLD\\2.2.3\\lib")
 	
 	set(UNITTEST++_LIBRARIES "\\lib\\x64\\vc110\\UnitTestxx\\1.4\\lib\\debug\\UnitTest++.lib")
 else()
-	find_package(UnitTest++ REQUIRED)
-    include_directories(${UNITTEST++_INCLUDE_DIRS})
+	include_directories("/Volumes/austirg/homebrew/include/")
+	set(UNITTEST++_LIBRARIES "/Volumes/austirg/homebrew/lib/libUnitTest++.a")
+	#find_package(UnitTest++ REQUIRED)
+
+	find_package(tbb 4.2 REQUIRED)
 endif()
 
 add_executable( arbiter-UT ${implementation_files} ${interface_files} ${platform_files})
@@ -24,6 +28,8 @@ add_executable( arbiter-UT ${implementation_files} ${interface_files} ${platform
 target_link_libraries( arbiter-UT
 					   arbiter 
 					   ${UNITTEST++_LIBRARIES}
+					   #${Boost_LIBRARIES}
+					   ${TBB_LIBRARIES}
 					 )
 					
 if(WIN32) 
